--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Large Event Weather Dashboard</title>
-  <link rel="stylesheet" href="css/style.css">
+  <base target="_top">
+  <?!= include('Stylesheet') ?>
 </head>
 <body>
   <div class="dashboard-container">
+
     <!-- Header -->
     <header class="dashboard-header">
       <div class="event-info">
@@ -25,6 +25,7 @@
 
     <!-- Main Content Grid -->
     <div class="dashboard-grid">
+
       <!-- Current Conditions -->
       <section class="panel current-conditions">
         <h2>Current Conditions</h2>
@@ -66,20 +67,20 @@
       <section class="panel weather-alerts">
         <h2>Weather Alerts</h2>
         <div id="alerts-container" class="alerts-content">
-          <p class="no-alerts">No active alerts</p>
+          <p class="no-alerts">Loading alerts...</p>
         </div>
       </section>
 
-      <!-- Radar Display (MRMS) -->
+      <!-- Radar Display -->
       <section class="panel radar-display">
-        <h2>Radar</h2>
+        <h2>Radar — KMUX</h2>
         <div class="radar-content">
           <div id="radar-container">
-            <img id="radar-image" src="" alt="MRMS Radar" />
-            <div class="loading-indicator">Loading radar...</div>
+            <img id="radar-image" src="" alt="Radar" />
+            <div class="loading-indicator"><div class="loading-spinner"></div> Loading radar...</div>
           </div>
           <div class="radar-controls">
-            <span class="radar-source">NOAA MRMS Composite</span>
+            <button id="radar-refresh" class="control-btn">⟳ Refresh</button>
             <span id="radar-timestamp" class="timestamp"></span>
           </div>
         </div>
@@ -87,15 +88,15 @@
 
       <!-- Satellite Display -->
       <section class="panel satellite-display">
-        <h2>Satellite</h2>
+        <h2>Satellite — GOES-18</h2>
         <div class="satellite-content">
           <div id="satellite-container">
             <img id="satellite-image" src="" alt="Satellite" />
-            <div class="loading-indicator">Loading satellite...</div>
+            <div class="loading-indicator"><div class="loading-spinner"></div> Loading satellite...</div>
           </div>
           <div class="satellite-controls">
             <select id="satellite-product" class="control-select">
-              <option value="geocolor">GeoColor</option>
+              <option value="GEOCOLOR">GeoColor</option>
               <option value="visible">Visible</option>
               <option value="infrared">Infrared</option>
               <option value="watervapor">Water Vapor</option>
@@ -109,17 +110,18 @@
       <section class="panel hourly-forecast">
         <h2>Hourly Forecast</h2>
         <div id="hourly-container" class="hourly-content">
-          <!-- Hourly forecast items will be inserted here -->
+          <div class="loading-indicator"><div class="loading-spinner"></div> Loading forecast...</div>
         </div>
       </section>
 
-      <!-- Additional Data -->
+      <!-- Forecast Summary -->
       <section class="panel additional-data">
         <h2>Forecast Summary</h2>
         <div id="forecast-summary" class="summary-content">
-          <!-- Forecast summary will be inserted here -->
+          <div class="loading-indicator"><div class="loading-spinner"></div> Loading...</div>
         </div>
       </section>
+
     </div>
 
     <!-- Footer -->
@@ -128,11 +130,12 @@
         Last Updated: <span id="last-update">--</span>
       </div>
       <div class="data-sources">
-        Data: NOAA National Weather Service
+        Data: Synoptic API / NOAA National Weather Service
       </div>
     </footer>
+
   </div>
 
-  <script src="js/app.js"></script>
+  <?!= include('JavaScript') ?>
 </body>
 </html>
