--- a/Stylesheet.html
+++ b/Stylesheet.html
@@ -103,75 +103,130 @@ body {
 }
 
 /* Grid placement */
-.current-conditions { grid-column: 1 / 2; grid-row: 1 / 2; }
-.weather-alerts     { grid-column: 1 / 2; grid-row: 2 / 4; }
+.current-conditions { grid-column: 1 / 2; grid-row: 1 / 3; }
+.weather-alerts     { grid-column: 1 / 2; grid-row: 3 / 4; }
 .radar-display      { grid-column: 2 / 4; grid-row: 1 / 3; }
 .satellite-display  { grid-column: 4 / 5; grid-row: 1 / 3; }
 .hourly-forecast    { grid-column: 2 / 4; grid-row: 3 / 4; }
 .additional-data    { grid-column: 4 / 5; grid-row: 3 / 4; }
 
-/* ── Current Conditions ──────────────────────────────────────────────────── */
+/* ── Current Conditions (expanded) ────────────────────────────────────────── */
 .conditions-content {
   display: flex;
   flex-direction: column;
+  gap: 0.75rem;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.obs-header {
+  display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
 .temperature-display {
   display: flex;
   align-items: baseline;
-  justify-content: center;
-  padding: 1rem 0;
+  flex-shrink: 0;
 }
 
 .temp-value {
-  font-size: 4rem;
+  font-size: 3.2rem;
   font-weight: 700;
   color: var(--accent-blue);
+  line-height: 1;
 }
 
 .temp-unit {
-  font-size: 2rem;
+  font-size: 1.4rem;
   color: var(--text-secondary);
-  margin-left: 0.5rem;
+  margin-left: 0.25rem;
 }
 
-.condition-details {
+.obs-meta {
+  display: flex;
+  flex-direction: column;
+  gap: 0.15rem;
+  min-width: 0;
+}
+
+.obs-time-label {
+  font-size: 0.75rem;
+  color: var(--text-secondary);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.obs-station-label {
+  font-size: 0.7rem;
+  color: var(--text-secondary);
+  opacity: 0.7;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.obs-grid {
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 0.75rem;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.4rem;
 }
 
 .detail-item {
   display: flex;
-  justify-content: space-between;
-  padding: 0.5rem;
+  flex-direction: column;
+  padding: 0.4rem 0.5rem;
   background: var(--bg-secondary);
   border-radius: 5px;
 }
 
 .detail-item .label {
   color: var(--text-secondary);
-  font-size: 0.9rem;
+  font-size: 0.65rem;
+  text-transform: uppercase;
+  letter-spacing: 0.3px;
+  margin-bottom: 0.1rem;
 }
 
-/* ── Weather Alerts ──────────────────────────────────────────────────────── */
+.detail-value {
+  font-size: 0.85rem;
+  font-weight: 600;
+  color: var(--text-primary);
+}
+
+.detail-item-wide {
+  grid-column: 1 / -1;
+}
+
+/* ── Weather Alerts (compact) ─────────────────────────────────────────────── */
+.weather-alerts h2 { margin-bottom: 0.5rem; font-size: 1rem; }
+
 .alerts-content { overflow-y: auto; flex: 1; }
 
 .alert-item {
-  padding: 1rem;
-  margin-bottom: 0.75rem;
+  padding: 0.6rem 0.75rem;
+  margin-bottom: 0.5rem;
   background: var(--bg-secondary);
-  border-left: 4px solid var(--accent-yellow);
-  border-radius: 5px;
+  border-left: 3px solid var(--accent-yellow);
+  border-radius: 4px;
+  font-size: 0.8rem;
 }
 
 .alert-item.severe { border-left-color: var(--accent-red); }
 
 .alert-title {
   font-weight: 600;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
   color: var(--accent-yellow);
+  font-size: 0.8rem;
+}
+
+.alert-description {
+  font-size: 0.75rem;
+  line-height: 1.3;
+  color: var(--text-secondary);
 }
 
 .alert-item.severe .alert-title { color: var(--accent-red); }
@@ -179,7 +234,8 @@ body {
 .no-alerts {
   text-align: center;
   color: var(--text-secondary);
-  padding: 2rem;
+  padding: 1rem;
+  font-size: 0.85rem;
 }
 
 /* ── Radar & Satellite ───────────────────────────────────────────────────── */
