--- a/Stylesheet.html
+++ b/Stylesheet.html
@@ -38,7 +38,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1.5rem;
+  padding: 0.6rem 1.2rem;
   background: #ffffff;
   border-radius: 10px;
   border: 1px solid #ddd;
@@ -52,7 +52,7 @@ body {
 }
 
 .header-logo {
-  height: 50px;
+  height: 48px;
   width: auto;
   object-fit: contain;
 }
@@ -63,16 +63,16 @@ body {
 }
 
 .event-info h1 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 600;
   color: #1a1f3a;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
 }
 
 .event-details {
   display: flex;
   gap: 2rem;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   color: #666;
   justify-content: center;
 }
@@ -80,23 +80,23 @@ body {
 .current-time { text-align: right; }
 
 #clock {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
   color: #1a1f3a;
   font-variant-numeric: tabular-nums;
 }
 
 #timezone {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   color: #666;
 }
 
 /* ── Grid ────────────────────────────────────────────────────────────────── */
 .dashboard-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  gap: 1rem;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 0.75rem;
   flex: 1;
   overflow: hidden;
 }
@@ -105,7 +105,7 @@ body {
   background: var(--bg-panel);
   border-radius: 10px;
   border: 1px solid var(--border-color);
-  padding: 1.5rem;
+  padding: 1rem;
   box-shadow: 0 4px 6px var(--shadow);
   overflow: hidden;
   display: flex;
@@ -113,26 +113,27 @@ body {
 }
 
 .panel h2 {
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
   color: var(--accent-blue);
   border-bottom: 2px solid var(--border-color);
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.4rem;
+  flex-shrink: 0;
+  text-align: center;
 }
 
 /* Grid placement */
 .current-conditions { grid-column: 1 / 2; grid-row: 1 / 3; }
-.weather-alerts     { grid-column: 1 / 2; grid-row: 3 / 4; }
-.radar-display      { grid-column: 2 / 4; grid-row: 1 / 3; }
-.satellite-display  { grid-column: 4 / 5; grid-row: 1 / 3; }
-.hourly-forecast    { grid-column: 2 / 4; grid-row: 3 / 4; }
-.additional-data    { grid-column: 4 / 5; grid-row: 3 / 4; }
+.key-points         { grid-column: 1 / 2; grid-row: 3 / 5; }
+.hourly-forecast    { grid-column: 2 / 3; grid-row: 1 / 5; }
+.radar-display      { grid-column: 3 / 4; grid-row: 1 / 3; }
+.satellite-display  { grid-column: 3 / 4; grid-row: 3 / 5; }
 
 /* ── Current Conditions (expanded) ────────────────────────────────────────── */
 .conditions-content {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 0.5rem;
   flex: 1;
   overflow-y: auto;
 }
@@ -157,7 +158,7 @@ body {
 }
 
 .temp-unit {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   color: var(--text-secondary);
   margin-left: 0.25rem;
 }
@@ -189,27 +190,27 @@ body {
 .obs-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0.4rem;
+  gap: 0.3rem;
 }
 
 .detail-item {
   display: flex;
   flex-direction: column;
-  padding: 0.4rem 0.5rem;
+  padding: 0.3rem 0.5rem;
   background: var(--bg-secondary);
   border-radius: 5px;
 }
 
 .detail-item .label {
   color: var(--text-secondary);
-  font-size: 0.65rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
   letter-spacing: 0.3px;
   margin-bottom: 0.1rem;
 }
 
 .detail-value {
-  font-size: 0.85rem;
+  font-size: 1.1rem;
   font-weight: 600;
   color: var(--text-primary);
 }
@@ -218,42 +219,41 @@ body {
   grid-column: 1 / -1;
 }
 
-/* ── Weather Alerts (compact) ─────────────────────────────────────────────── */
-.weather-alerts h2 { margin-bottom: 0.5rem; font-size: 1rem; }
+/* ── Key Points (AI forecast summary) ─────────────────────────────────────── */
+.key-points {
+  border: 3px solid var(--accent-yellow);
+  box-shadow: 0 0 12px rgba(255, 193, 7, 0.3);
+}
 
-.alerts-content { overflow-y: auto; flex: 1; }
+.key-points h2 { margin-bottom: 0.5rem; font-size: 1rem; }
 
-.alert-item {
-  padding: 0.6rem 0.75rem;
-  margin-bottom: 0.5rem;
+.keypoints-content { overflow-y: auto; flex: 1; }
+
+.keypoints-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.keypoint-item {
+  padding: 0.5rem 0.7rem;
   background: var(--bg-secondary);
-  border-left: 3px solid var(--accent-yellow);
+  border-left: 3px solid var(--accent-blue);
   border-radius: 4px;
-  font-size: 0.8rem;
-}
-
-.alert-item.severe { border-left-color: var(--accent-red); }
-
-.alert-title {
-  font-weight: 600;
-  margin-bottom: 0.2rem;
-  color: var(--accent-yellow);
-  font-size: 0.8rem;
-}
-
-.alert-description {
-  font-size: 0.75rem;
-  line-height: 1.3;
-  color: var(--text-secondary);
-}
-
-.alert-item.severe .alert-title { color: var (--accent-red); }
-
-.no-alerts {
-  text-align: center;
-  color: var(--text-secondary);
-  padding: 1rem;
   font-size: 0.85rem;
+  line-height: 1.4;
+  color: var(--text-primary);
+}
+
+.keypoints-source {
+  margin-top: 0.5rem;
+  font-size: 0.6rem;
+  color: var(--text-secondary);
+  text-align: center;
+  opacity: 0.7;
 }
 
 /* ── Radar & Satellite ───────────────────────────────────────────────────── */
@@ -261,7 +261,8 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap: 0.75rem;
+  gap: 0.4rem;
+  min-height: 0;
 }
 
 #radar-map {
@@ -270,6 +271,23 @@ body {
   border-radius: 5px;
   z-index: 0;
   background: var(--bg-secondary);
+  position: relative;
+}
+
+.map-timestamp-overlay {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: rgba(26, 31, 58, 0.85);
+  color: var(--text-primary);
+  padding: 0.2rem 0.5rem;
+  border-radius: 4px;
+  font-size: 0.65rem;
+  font-weight: 600;
+  z-index: 1000;
+  pointer-events: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  border: 1px solid var(--border-color);
 }
 
 /* Dark theme Leaflet overrides */
@@ -305,12 +323,13 @@ body {
   border-radius: 5px;
   z-index: 0;
   background: var(--bg-secondary);
+  position: relative;
 }
 
 /* Dark theme Leaflet overrides for satellite map */
 #satellite-map .leaflet-control-zoom a {
   background: var(--bg-panel);
-  color: var(--text-primary);
+  color: var (--text-primary);
   border-color: var(--border-color);
 }
 #satellite-map .leaflet-control-attribution {
@@ -329,8 +348,8 @@ body {
 /* Channel selector */
 .satellite-channel-selector {
   display: flex;
-  gap: 0.4rem;
-  margin-bottom: 0.5rem;
+  gap: 0.3rem;
+  flex-shrink: 0;
 }
 
 .channel-btn {
@@ -573,47 +592,6 @@ thead .ft-sticky-col {
 .ft-pop-low  { color: var(--accent-blue); }
 .ft-pop-none { color: var(--text-secondary); }
 
-/* ── Forecast Summary ────────────────────────────────────────────────────── */
-.summary-content {
-  overflow-y: auto;
-  flex: 1;
-  font-size: 0.9rem;
-  line-height: 1.6;
-}
-
-.summary-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0.5rem;
-}
-
-.summary-stat {
-  padding: 0.6rem 0.75rem;
-  background: var(--bg-secondary);
-  border-radius: 5px;
-}
-
-.summary-label {
-  font-size: 0.7rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  color: var(--text-secondary);
-  margin-bottom: 0.25rem;
-}
-
-.summary-value {
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--text-primary);
-}
-
-.summary-source {
-  margin-top: 0.75rem;
-  font-size: 0.7rem;
-  color: var(--text-secondary);
-  text-align: center;
-}
-
 /* ── Footer ──────────────────────────────────────────────────────────────── */
 .dashboard-footer {
   display: flex;
@@ -637,6 +615,88 @@ thead .ft-sticky-col {
 @media (max-width: 1600px) {
   .event-info h1 { font-size: 1.5rem; }
   #clock { font-size: 2rem; }
+}
+
+/* ── Timeline Chart (Line Graph Hourly Forecast) ─────────────────────────── */
+.timeline-chart {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  height: 100%;
+  overflow: hidden;
+}
+
+.timeline-legend {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  padding: 0.35rem;
+  background: var(--bg-secondary);
+  border-radius: 5px;
+  flex-shrink: 0;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  font-size: 0.7rem;
+  color: var(--text-secondary);
+}
+
+.legend-color {
+  width: 20px;
+  height: 3px;
+  border-radius: 2px;
+}
+
+.legend-warn {
+  width: 16px;
+  height: 10px;
+  background: rgba(255, 193, 7, 0.15);
+  border: 1px solid rgba(255, 193, 7, 0.5);
+  border-radius: 2px;
+}
+
+.timeline-rows {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.35rem;
+  overflow: hidden;
+}
+
+.timeline-row {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background: var(--bg-secondary);
+  border-radius: 5px;
+  border: 1px solid var(--border-color);
+  overflow: hidden;
+  min-height: 0;
+}
+
+.row-header {
+  padding: 0.25rem 0.5rem;
+  background: rgba(33, 150, 243, 0.08);
+  border-bottom: 1px solid var(--border-color);
+  font-size: 0.95rem;
+  font-weight: 600;
+  color: var(--accent-blue);
+  flex-shrink: 0;
+}
+
+.row-graph {
+  flex: 1;
+  position: relative;
+  min-height: 0;
+}
+
+.row-graph svg {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 /* ── Loading & Error States ──────────────────────────────────────────────── */
